--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,153 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+root, *, *::after, *::before{
+  margin:0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  font-family: 'Inter', sans-serif;
+  color: #293264;
+  background: #F5F7FB;
+  overflow: hidden;
+}
+
+h1, legend {
+  font-family: 'Karla', sans-serif;
+}
+
+.main {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.bg--blob1 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 20vw;
+  z-index: -1;
+}
+
+.bg--blob2 {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 20vw;
+  z-index: -1;
+}
+
+.start-view{
+  text-align: center;
+}
+
+.title{
+  font-size: 40px;
+  line-height: 2em;
+}
+
+.description{
+  font-size: 18px;
+  letter-spacing: 1px;
+}
+
+.start--btn, .submit-btn {
+  margin:2em 0;
+  font-size: 18px;
+  letter-spacing: 1px;
+  color: #FFFFFF;
+  background: #4D5B9E;
+  padding: 1em 4em;
+  border:0;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: padding .2s, margin .2s, background-color .2s;
+}
+
+.start--btn:hover, .submit-btn:hover {
+  padding: 1.2em 4.4em;
+  margin: 1.8em 1.6em;
+  background: #6878ce;
+}
+
+.quiz--container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 800px;
+}
+
+.question{
+  border:0;
+  padding:1em;
+  margin: .5em 0;
+  border-bottom: 1px solid #DBDEF0;
+  width:100%;
+}
+
+.question--title{
+  font-size: 16px;
+  line-height: 1.4em;
+}
+
+.answers {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.answer {
+  margin: 0 1em 1em 0;
+  font-size: 14px;
+}
+
+.answer input[type="radio"] {
+  display: none;
+}
+
+.answer > input[type="radio"] + label {
+  font-weight: 500;
+  border: 1px solid #293264;
+  padding: .3em .5em;
+  border-radius: 10px;
+  transition: background-color .2s;
+}
+
+.answer > input[type="radio"]:checked + label, .answer > input[type="radio"]:enabled + label:hover {
+  background: #D6DBF5;
+  border: 0;
+  padding: calc(.3em + 1px) calc(.5em + 1px);
+}
+
+input[type="radio"]:disabled + label {
+  opacity: 50%;
+}
+
+.submit-btn{
+  font-size: 14px;
+}
+
+.correct + label {
+  background: #94D7A2 !important;
+  border: 0 !important;
+  padding: calc(.3em + 1px) calc(.5em + 1px) !important;
+  opacity: 100% !important;
+}
+
+.wrong:checked + label{
+  background: #F8BCBC !important;
+}
+
+.results--container{
+  display: flex;
+  position: relative;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.results {
+  margin: 0 2em;
+  color: #293264;
+  font-weight: bold;
 }
